<resources>
    <string name="app_name">PicPay</string>

    <string name="contacts_title">Contacts</string>
    <string name="search_hint">Who do you want to pay?</string>

    <string name="priming_title">Register a credit card</string>
    <string name="priming_text">To make payments to other people you need register a person credit card.</string>
    <string name="priming_button">Register card</string>

    <string name="register_field_card">Card number</string>
    <string name="register_field_name">Cardholder name</string>
    <string name="register_field_expiration">Expiration</string>
    <string name="register_field_cvv">CVV</string>
    <string name="register_button_save">Save</string>
    <string name="register_error_date">Expiration date incorrect</string>

    <string name="example_username">\@aliceromero</string>
    <string name="example_name">Alice Romero</string>
    <string name="currency_symbol">R$</string>
    <string name="currency_value">0,00</string>
    <string name="transaction_card">%1$s %2$s •</string>
    <string name="transaction_edit">Edit</string>
    <string name="transaction_pay">Pay</string>

    <string name="default_response">Something is wrong, try again later\.\.\.</string>
    <string name="receipt_title">Receipt</string>
    <string name="receipt_date">%1$s at %2$s</string>
    <string name="receipt_transaction">Transaction: %1$s</string>
    <string name="receipt_card">Card %1$s %2$s</string>
    <string name="receipt_value">R$ %1$s</string>
    <string name="receipt_total">Total paid</string>
    <string name="error_not_found">Not found</string>

</resources>
