<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_swipe">
        <View
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_search"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center"
                android:textColor="@color/color_white"
                android:textSize="17sp"
                android:text="@string/receipt_title"
                android:fontFamily="@font/font_weight_500"/>
    </LinearLayout>
    
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/receipt_image"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_account_default"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/color_white"
            android:text="@string/example_username"
            android:id="@+id/receipt_username"/>
    <TextView
            android:id="@+id/receipt_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/color_white_opacity_6"
            android:text="@string/receipt_date"/>
    <TextView
            android:id="@+id/receipt_transaction_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/color_white_opacity_4"
            android:text="@string/receipt_transaction"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_search"/>
    <RelativeLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_weight_500"
                android:textSize="13sp"
                android:textColor="@color/color_white"
                android:text="@string/receipt_card"
                android:id="@+id/receipt_card"/>
        <TextView
                android:id="@+id/receipt_value"
                android:layout_marginTop="12dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_weight_500"
                android:textSize="13sp"
                android:textColor="@color/color_white"
                android:text="@string/receipt_value"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"/>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_search"/>
    <RelativeLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="136dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/color_white"
                android:text="@string/receipt_total"/>
        <TextView
                android:id="@+id/receipt_value_total"
                android:layout_marginTop="12dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/color_white"
                android:text="@string/receipt_value"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"/>
    </RelativeLayout>
</LinearLayout>