<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.transaction.TransactionActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/transaction_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_account_default"/>
            <TextView
                    android:id="@+id/transaction_username"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/color_white"
                    android:text="@string/example_username"/>
            <LinearLayout
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textColor="@color/color_white"
                        android:text="@string/currency_symbol"/>
                <EditText
                        android:focusable="true"
                        android:background="@null"
                        android:focusableInTouchMode="true"
                        android:id="@+id/transaction_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:textSize="54sp"
                        android:maxLength="9"
                        android:textColor="@color/color_white"
                        android:hint="@string/currency_value"
                        android:textColorHint="@color/color_white"
                        android:inputType="numberDecimal"
                        tools:ignore="Autofill"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/transaction_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:textSize="14sp"
                        android:textColor="@color/color_white"
                        android:text="@string/transaction_card"/>
                <TextView
                        android:id="@+id/transaction_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/transaction_edit"
                        android:textAllCaps="true"/>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/color_white"
                android:textAlignment="center"
                android:text="@string/transaction_pay"
                android:textAllCaps="false"
                android:id="@+id/transaction_pay_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_disable"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>