<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.priming.PrimingActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_marginTop="78dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription"
                    android:src="@drawable/credit_card"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_marginTop="31dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/priming_title"/>
            <TextView
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white_opacity_8"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:text="@string/priming_text"/>
        </LinearLayout>
        <Button
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/color_white"
                android:textAlignment="center"
                android:text="@string/priming_button"
                android:textAllCaps="false"
                android:id="@+id/priming_creditcard_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_button"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>