<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.priming.PrimingActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_white"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:text="@string/priming_button"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="39dp"
                        android:textColorHint="@color/color_white_opacity_4">
                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/register_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_field_card"
                            android:textSize="16sp"
                            android:maxLength="16"
                            android:textColor="@color/color_white"
                            android:inputType="number|textNoSuggestions"
                            app:backgroundTint="@color/color_tint"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="41dp"
                        android:textColorHint="@color/color_white_opacity_4">
                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/register_cardholder_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_field_name"
                            android:textSize="16sp"
                            android:textColor="@color/color_white"
                            android:inputType="text|textNoSuggestions"
                            app:backgroundTint="@color/color_tint"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="43dp"
                        android:baselineAligned="false">
                    <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="22dp"
                            android:layout_marginEnd="22dp"
                            android:textColorHint="@color/color_white_opacity_4">
                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/register_card_expiration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/register_field_expiration"
                                android:textSize="16sp"
                                android:maxLength="5"
                                android:textColor="@color/color_white"
                                android:inputType="date"
                                app:backgroundTint="@color/color_tint"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/color_white_opacity_4">
                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/register_card_cvv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/register_field_cvv"
                                android:maxLength="3"
                                android:textSize="16sp"
                                android:textColor="@color/color_white"
                                android:inputType="number|textNoSuggestions"
                                app:backgroundTint="@color/color_tint"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <Button
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/color_white"
                android:textAlignment="center"
                android:text="@string/register_button_save"
                android:textAllCaps="false"
                android:id="@+id/register_save_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_button"
                android:visibility="gone"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>